# spot_the_blOb

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
examples/gridded data/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
examples/unstructured data/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
marEx/: __init__.py  detect.py  helper.py  track.py
marEx/plotX/: __init__.py  base.py
notebooks/: 00_test_morphological.ipynb  01_preprocess_dask.ipynb  01_preprocess_extremes.ipynb  02_id_track_events.ipynb  02_track_dask.ipynb  03_visualise_dask.ipynb  03_visualise_events.ipynb
notebooks/structured/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
notebooks/tests/: 00_test_morphological.ipynb
notebooks/unstructured/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
pyMHW_tracker/: _version.py
spot_the_blOb/: __init__.py  _version.py  helper.py  hot_to_blOb.py  plotter.py  spot_the_blOb.py  spot_the_blOb_recheckalloverlaps.py  tracker.py
spot_the_blOb/Xplot/: __init__.py  gridded.py
spot_the_blOb/plotter/: __init__.py  base.py  plotter.py  structured.py  unstructured.py
