[sdist]
formats = gztar

[check-manifest]
ignore =
    notebooks
    notebooks/*


[metadata]
name = spot_the_blOb
description = 
author = Aaron Wienkers
url = https://github.com/wienkers/spot_the_blOb
long_description = file: README.md
long_description_content_type = text/markdown
license = 
license_file = 

classifiers =
    Development Status :: 5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

author_email = aaron@wienkers.com

[options]
install_requires =
    numpy
    xarray
    dask
    scipy 
    scikit-image
    dask_image
    jax
    jaxlib
    pillow
    xhistogram
setup_requires= 
    setuptools_scm
python_requires = >=3.6

zip_safe = False
packages = find:
